update header styles

--- a/sass/partials/components/_authorbox.scss
+++ b/sass/partials/components/_authorbox.scss
@@ -18,7 +18,9 @@ $authorbox_collapse: 510px;
         }
 
         @media screen and (max-width: $authorbox_collapse){
-            @extend %center;
+            display: block;
+            position: relative;
+            margin: 0 auto;
             padding-right: 0;
         }
     }
