--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <a href="{{ site.baseurl | replace: '//', '/' }}/" class="logo noline">
-        {% include full.html %}
-        {% include logo.html %}
-        {% include icon.html %}
-    </a>
+    <div class="content">
+        <a href="{{ site.baseurl | replace: '//', '/' }}/" class="logo noline">
+            <strong class="twister">CefSharp Tutorials</strong>
+        </a>
+    </div>
 </div>
