add paragraph gap

--- a/sass/partials/components/_article.scss
+++ b/sass/partials/components/_article.scss
@@ -50,6 +50,9 @@ article{
     }
 
     .post_content{
+        p {
+            margin-bottom: 24px;
+        }
         .index &{
             padding-bottom: 50px;
         }
