--- a/sass/modules/_typography.scss
+++ b/sass/modules/_typography.scss
@@ -66,9 +66,9 @@
 }
 
 // Font Weights
-$black: 900;
 $medium: 500;
 $light: 300;
 
 // Font Variables
 $roboto: "Roboto", "Calibri", "Arial", sans-serif;
+$georgia: "Georgia", "Cambria","Times New Roman",Times,serif;
