--- a/sass/partials/components/_widget.scss
+++ b/sass/partials/components/_widget.scss
@@ -2,8 +2,7 @@
     background: $box_bg;
     box-sizing: border-box;
     padding: 10px;
-    border: $box_line;
-    margin-bottom: 20px;
+    border-bottom: $box_line;
 
     &:last-of-type{
         margin-bottom: 0px;
