--- a/sass/partials/layout/_index.scss
+++ b/sass/partials/layout/_index.scss
@@ -24,6 +24,12 @@
 
 .index{
     article{
+        h1{
+            font-size: 1.6em;
+        }
+
+        img{ margin-bottom: 20px;}
+
         span{
             padding: 10px;
         }
