--- a/sass/partials/layout/_post.scss
+++ b/sass/partials/layout/_post.scss
@@ -15,10 +15,8 @@
     }
 
     .meta{
-        margin: 20px 0;
+        margin: 0 0 54px;
         padding: 10px 0;
-        border-top: $box_line;
-        border-bottom: $box_line;
     }
 
     .featsection{
