--- a/sass/partials/components/_logo.scss
+++ b/sass/partials/components/_logo.scss
@@ -12,13 +12,15 @@
 }
 
 .twister{
-    font-size:4vmax;
+    font-size:4vw;
     font-weight: $light;
     line-height:125%;
     fill:$coal;
-    font-family: $roboto;
-    text-transform: uppercase;
     transition: .3s all ease;
+
+    @media screen and (max-width: 600px){
+        font-size:2.6vmax;
+    }
 }
 
 .slogan{
@@ -26,7 +28,6 @@
     font-weight:200;
     line-height:125%;
     fill:$magenta;
-    font-family: $roboto;
     transition: .3s all ease;
 }
 
