--- a/sass/partials/layout/_header.scss
+++ b/sass/partials/layout/_header.scss
@@ -38,12 +38,12 @@
         top: 0;
         left: 0;
         transition: .3s all ease-in-out;
-        padding: 110px 10px; // adjust to change header height
+        padding: 50px 10px 110px; // adjust to change header height
         box-sizing: border-box;
         overflow: hidden;
 
         @media screen and (max-width: $from_noslogan_to_icon){
-            padding: 120px 10px;
+            padding: 40px 10px 60px;
         }
 
         .logo {
