--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,12 @@
 <div id="search">
-    <form role="search" id="searchform">
+<!--    <form role="search" id="searchform">
         <input type="search" placeholder="Search"/>
+    </form>-->
+
+    <form role="search" id="searchform" action="{{site.baseurl | replace: '//', '/'}}/search/index.html" method="get">
+        <input type="search" id="search-box" name="query" placeholder="Search"/>
+<!--        <input type="submit" value="search">-->
     </form>
+
+
 </div>
