--- a/sass/modules/_colors.scss
+++ b/sass/modules/_colors.scss
@@ -11,5 +11,6 @@ $green: #AEB9A0;
 $magenta: #75535F;
 $coal: #4A4240;
 $blue: #505879;
+$blue_hover: #4055ab;
 $lightblue: #9BA4B5;
 $sand: #E6DED6;
