--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="content">
-        <span>&copy; twister</span>
+        <span>&copy; CefSharp Tutorials</span>
         <span class="backtotop">back to top</span>
     </div>
 </footer>
