--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -13,12 +13,12 @@
         {% include search.html %}
         <section class="margin">
             <div class="content">
-                <p class="switch">switch layout: <span id="grid">Grid</span> &bull; <span id="classic">Classic</span></p>
-                {% if page.title %}<h1 class="title">{{ page.title }}</h1>{% endif %}
-                <div class="articles">
-                    {{ content }}
+                <div class="content_container">
+                    {% if page.title %}<h1 class="title">{{ page.title }}</h1>{% endif %}
+                    <div class="articles">
+                        {{ content }}
+                    </div>
                 </div>
-                {% include sidebar.html %}
             </div>
         </section>
         {% include footer.html %}
