--- a/sass/partials/_general.scss
+++ b/sass/partials/_general.scss
@@ -11,7 +11,7 @@ body{
     line-height: $general_line-height;
     background:{
         color: $body_bg-color;
-        image: $body_bg-img;
+        /*image: $body_bg-img;*/
         attachment: fixed;
         position: center;
         repeat: repeat;
