--- a/sass/partials/components/_search.scss
+++ b/sass/partials/components/_search.scss
@@ -21,12 +21,15 @@ body.overflow{
         left: 50%;
         transform: translate(-50%, -50%);
         color: $so_color;
-        background: transparent;
-        font-size: 3em;
+        background: $white;
+        font-size: 1.5em;
         font-weight: $main_font-weight;
-        text-align: center;
-        border: 0px;
+        border: 2px solid $lightblue;
         outline: none;
+        padding:12px 16px;
+        border-radius: 3px;
+        width: 80%;
+        max-width: 550px;
     }
 }
 
@@ -36,4 +39,9 @@ body.overflow{
     opacity: 1;
     z-index: 106;
     display: block;
+}
+#search-results {
+    li {
+        margin-bottom: 54px;
+    }
 }
