--- a/_layouts/post_full.html
+++ b/_layouts/post_full.html
@@ -41,7 +41,7 @@
                             {{ page.title }}
                         </h1>
                         <div class="meta">
-                            {% include author.html%} &bull;
+                            {% include author.html%}
                             <span class="date">
                                 Published on {{ page.date | date: '%B %d, %Y' }}
                             </span>
