--- a/sass/partials/components/_logo.scss
+++ b/sass/partials/components/_logo.scss
@@ -19,7 +19,7 @@
     transition: .3s all ease;
 
     @media screen and (max-width: 600px){
-        font-size:2.6vmax;
+        font-size:30px;
     }
 }
 
