--- a/sass/partials/_general.scss
+++ b/sass/partials/_general.scss
@@ -29,22 +29,42 @@ h1, h2, h3, h4, h5, h6{
 
 h1{
     font-size: 2.1em;
+
+    @media screen and (max-width: 560px){
+        font-size: 1.2em;
+    }
 }
 
 h2{
     font-size: 1.6em;
+
+    @media screen and (max-width: 560px){
+        font-size: 1em;
+    }
 }
 
 h3{
     font-size: 1.2em;
+
+    @media screen and (max-width: 560px){
+        font-size: 0.9em;
+    }
 }
 
 h4{
     font-size: 1em;
+
+    @media screen and (max-width: 560px){
+        font-size: 0.83em;
+    }
 }
 
 h5{
     font-size: .83em;
+
+    @media screen and (max-width: 560px){
+        font-size: .8em;
+    }
 }
 
 h6{
@@ -97,6 +117,11 @@ iframe{
 .margin{
     padding-top: 50px;
     width: 100%;
+
+    @media screen and (max-width: 640px){
+        padding-top: 10px;
+    }
+
     .content{
         @include flexbox(row, wrap, space-between, stretch);
 
