--- a/sass/partials/components/_article.scss
+++ b/sass/partials/components/_article.scss
@@ -81,7 +81,27 @@ article{
     }
 
     .gist {
-        max-width: 840px;
+        max-width: 760px;
+
+        @media screen and (max-width: 800px){
+            max-width: 680px;
+        }
+
+        @media screen and (max-width: 740px){
+            max-width: 450px;
+        }
+
+        @media screen and (max-width: 520px){
+            max-width: 320px;
+        }
+
+        @media screen and (max-width: 375px){
+            max-width: 300px;
+        }
+
+        @media screen and (max-width: 340px){
+            max-width: 280px;
+        }
     }
 }
 
