--- a/sass/partials/components/_logo.scss
+++ b/sass/partials/components/_logo.scss
@@ -18,7 +18,11 @@
     fill:$coal;
     transition: .3s all ease;
 
-    @media screen and (max-width: 600px){
+    @media screen and (max-width: 1000px){
+        font-size:48px;
+    }
+
+    @media screen and (max-width: 640px){
         font-size:30px;
     }
 }
