add tracking and favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>{{ site.name }}{% if page.title %} - {{ page.title }} {% endif%}</title>
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl | replace: '//', '/' }}/favicon.ico">
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:500,600' rel='stylesheet' type='text/css'>
