--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,5 +22,6 @@
         </section>
         {% include footer.html %}
         <script src="{{ site.baseurl | replace: '//', '/' }}/js/build/global.min.js"></script>
+        {% include tracking.html %}
     </body>
 </html>
