Update logo, add sidebar, fix pagination

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,14 +62,14 @@
                                 {{ page.categories | category_links }}
                             </p>
                             {% endif %}
-                            <!--{% if page.tags %}
+                            {% if page.tags %}
                             <p class="tags">
                                 <span class="name">Tags:</span>
                                 {% for tag in page.tags %}
                                     <a href="{{ site.tag_dir | prepend: site.baseurl | replace: '//', '/' }}/{{ tag }}">{{ tag }}</a>
                                 {% endfor %}
                             </p>
-                            {% endif %}-->
+                            {% endif %}
                         </div>
                         {% endif %}
                     </article>
