--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="content">
         <a href="{{ site.baseurl | replace: '//', '/' }}/" class="logo noline">
+            {% include logo.html %}
             <strong class="twister">CefSharp Tutorials</strong>
         </a>
     </div>
