--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,11 +13,12 @@
         {% include search.html %}
         <section class="margin">
             <div class="content">
-                <p class="switch">switch layout: <span id="grid">Grid</span> &bull; <span id="classic">Classic</span></p>
+                <!--<p class="switch">switch layout: <span id="grid">Grid</span> &bull; <span id="classic">Classic</span></p>-->
                 {% if page.title %}<h1 class="title">{{ page.title }}</h1>{% endif %}
                 <div class="articles">
                     {{ content }}
                 </div>
+                {% include sidebar.html %}
             </div>
         </section>
         {% include footer.html %}
