Fix header. Update sidebar. Fix pagination.

--- a/sass/partials/components/_widget.scss
+++ b/sass/partials/components/_widget.scss
@@ -13,8 +13,8 @@
     }
 
     ul{
-        list-style: decimal;
-        padding: 0 25px;
+        list-style: none;
+        padding: 0;
 
         li{
             padding-left: 0px;
