--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="widget">
+    <!--<div class="widget">
         <h3 class="title">Categories</h3>
         <ul class="category_list">
             {% assign category_list = site.categories %}
@@ -14,7 +14,7 @@
             {% endif %}
             {% assign category_list = nil %}
         </ul>
-    </div>
+    </div>-->
     <div class="widget">
         <h3 class="title">Tags</h3>
         <ul class="tag_list">
