--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,11 +26,11 @@
                     {% assign category_list = site.categories %}
                     {% if category_list.first[0] == null %}
                     {% for category in category_list %}
-                    <li><a href="{{ site.category_dir | replace: '//', '/' }}/{{ category }}">{{ category }}</a></li>
+                    <li><a href="{{ site.category_dir | replace: '//', '/' }}/{{ category | downcase }}">{{ category }}</a></li>
                     {% endfor %}
                     {% else %}
                     {% for category in category_list %}
-                    <li><a href="{{ site.category_dir | replace: '//', '/' }}/{{ category[0] }}">{{ category[0] }}</a></li>
+                    <li><a href="{{ site.category_dir | replace: '//', '/' }}/{{ category[0] | downcase }}">{{ category[0] }}</a></li>
                     {% endfor %}
                     {% endif %}
                     {% assign category_list = nil %}
